solved scrollbar issue (forever? :)))

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,13 +6,11 @@
 
 html {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: overlay;
     font-family: 'Rubik', sans-serif;
-    padding-left: 10px;
 }
 
 body {
-    background-color: var(--green-light);
     width: 100%;
     height: 100%;
     margin: 0;
@@ -87,12 +85,13 @@ hr {
 }
 
 ::-webkit-scrollbar-track {
-    background: var(--green-light);
+    background: transparent;
     width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--green-main);
+    background: var(--orange-main);
+    outline: red;
     border-radius: 10px;
 }
 
